--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "concurrently \"tidory start\" \"npm run sass:compile\" \"npm run sass:watch\"",
-    "preview": "concurrently \"tidory preview\" \"npm run sass:compile\" \"npm run sass:watch\"",
+    "start": "npm run sass:compile && concurrently \"tidory start\" \"npm run sass:watch\"",
+    "preview": "npm run sass:compile && concurrently \"tidory preview\" \"npm run sass:watch\"",
     "production": "tidory production",
     "store": "tidory store",
     "deploy": "tidory deploy",
@@ -23,7 +23,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-webpack-plugin": "^3.2.0",
     "concurrently": "^8.2.0",
-    "node-sass": "^9.0.0",
+    "node-sass": "^8.0.0",
     "pug-lint": "^2.6.0"
   },
   "dependencies": {
