--- a/package.json
+++ b/package.json
@@ -9,24 +9,27 @@
     "sass:watch": "node-sass -w style/style.scss style/style.css --output-style expanded",
     "sass:compile": "node-sass style/style.scss style/style.css --output-style expanded"
   },
-  "license": "MIT",
+  "license": "LuMir",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tidory/tidory"
+    "url": "https://github.com/lumirlumir/web_tistory"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.22.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-webpack-plugin": "^3.2.0",
     "concurrently": "^8.2.0",
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "node-sass": "^8.0.0",
+    "prettier": "^3.0.1",
     "pug-lint": "^2.6.0"
   },
   "dependencies": {
+    "eslint-webpack-plugin": "^3.2.0",
     "alpinejs": "^3.11.1",
     "tailwindcss": "^3.2.4",
     "tidory": "^8.3.3"
