--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "plugins": ["import", "prettier"],
-  "extends": ["airbnb", "airbnb/hooks", "plugin:import/errors", "plugin:import/warnings", "plugin:prettier/recommended", "plugin:eslint/recommended", "prettier"],
+  "extends": ["airbnb", "airbnb/hooks", "plugin:import/errors", "plugin:import/warnings", "plugin:prettier/recommended", "prettier"],
   "env": {
     "browser": true,
     "node": true
@@ -11,6 +11,7 @@
   },
   "ignorePatterns": ["dist/", "legacy/"],
   "rules": {
-    "prettier/prettier": ["error", { "printWidth": 250 }]
+    "prettier/prettier": ["error", { "printWidth": 250 }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
 }
