--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-config-airbnb": "^19.0.4",
     "node-sass": "^8.0.0",
     "prettier": "^3.0.1",
-    "pug-lint": "^2.6.0"
+    "pug-lint": "^2.6.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3"
   },
   "dependencies": {
     "eslint-webpack-plugin": "^3.2.0",
