--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.10.1",
     "tidory": "^8.3.3"
   }
 }
